# CollisionHandling

./: Feasible Regions.pptx
Cpp_CollisionDetection/: HardCases.pptx
Cpp_CollisionDetection/Data/: bun_10KV20KF.1.ele  bun_10KV20KF.1.node  bun_10KV20KF.1.smesh  bun_10KV20KF.1.vtk  bun_10KV20KF.ply  bun_10KV20KF.t  bun_zipper.ply
Cpp_CollisionDetection/Data/Dragon/: dragon_low.1.edge  dragon_low.1.ele  dragon_low.1.face  dragon_low.1.node  dragon_low.ply  dragon_low.poly  dragon_low.t  dragon_low_skipped.face
Cpp_CollisionDetection/Modules/PathFinder/: TetMeshPathFinder.cpp  TetMeshPathFinder.h
Cpp_CollisionDetection/Modules/PointQuery/: PointQuery.cpp  PointQuery.h
Cpp_CollisionDetection/P01_TestEmbreeCmake/: CMakeLists.txt  main.cpp
Cpp_CollisionDetection/P02_TestPointQuery/: CMakeLists.txt  main.cpp
Cpp_CollisionDetection/P03_SurfaceMeshClosestPointFind/: CMakeLists.txt  main.cpp
Cpp_CollisionDetection/P04_TetMeshClosestPointFind/: CMakeLists.txt  main.cpp
Cpp_CollisionDetection/P05_TetrahedraQuery/: CMakeLists.txt  main.cpp
Cpp_CollisionDetection/P06_TetrahedraQueryParallel/: CMakeLists.txt  main.cpp
Cpp_CollisionDetection/P07_TetrahedraQueryParallelDynamic/: CMakeLists.txt  main.cpp
Cpp_CollisionDetection/P08_TestPBD/: 07_ShadowMapping.cpp  BlinnShading.fragmentshader  BlinnShading.vertexshader  Buffer.h  CMakeLists.txt  GLArray.h  Mirror.fs  Mirror.vs  Passthrough.vertexshader  TetMeshInterface.h  WobblyTexture.fragmentshader  lodepng.h  skybox.fs  skybox.vs
Cpp_CollisionDetection/P08_TestPBD/Shaders/: BlinnShadingShadowMapping.fragmentshader  BlinnShadingShadowMapping.vertexshader  DepthMap.vs  DirectTexture.fragmentshader  Passthrough.vertexshader
Cpp_CollisionDetection/P08_TestPBD/cyCodeBase/: cyGL.h  cyQuat.h
Data/: Shape1.psd
Py_DistanceField/: ImgProcess.py  S01_ComputeDistanceField.py  S02_ClosestPtInteractively.py
Py_TetGen/: S01_RunTetgen.py
